[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyorca"
version = "0.2.0"
description = "Python bindings for ORCA (Optimal Reciprocal Collision Avoidance) library"
authors = [
    { name = "Han Ruihua", email = "hanrh@connect.hku.hk" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.setuptools]
packages = []